# enterprise-ai-dev-kit

./: .gitignore  README.md  hatch_build.py  install.ps1  install.sh  pyproject.toml
enterprise_adk/: __init__.py  certs.py  cli.py  edp_info.yml  enterprise_config.yaml  mcp.py  prereqs.py  setup.py
enterprise_adk/config/: __init__.py  loader.py  models.py
enterprise_adk/installer/: __init__.py  auth.py  mcp.py  prereqs.py  workspace.py
enterprise_adk/skills/: __init__.py  manager.py
enterprise_adk/skills/loaders/: __init__.py  databricks_loader.py  enterprise_loader.py
enterprise_adk/version/: __init__.py  manager.py
enterprise_skills/enterprise-cost-optimization/: SKILL.md  cluster-policies.md
enterprise_skills/enterprise-data-governance/: SKILL.md  data-classification.md
enterprise_skills/enterprise-dynamic-modeling/: SKILL.md
enterprise_skills/enterprise-naming-convention/: SKILL.md
